# TCG

./: .gitignore  README.md
backend/: README.md  pyproject.toml  start_server.sh
backend/src/tcg_engine/: __init__.py  api.py  bootstrap.py  game.py  models.py  rules.py  sample_cards.py
backend/tests/: test_api.py  test_game.py
web/: README.md  index.html  package.json  start_server.sh  vite.config.ts
web/src/: App.tsx  main.js  styles.css
